Update instructions for JDK 16
https://github.com/google/error-prone/issues/1157